--- a/style.css
+++ b/style.css
@@ -8,7 +8,16 @@ scroll-behavior: smooth;
 }
 
 body{
-    background: cyan;
+    background: black;
+    color: white;
+}
+
+#HomePage{
+    width: 100%;
+  height: 100vh; 
+  background-image: url(car.webp);
+  background-size: cover;
+  background-position: center;
 }
 
 nav{
@@ -50,8 +59,8 @@ nav ul li a:hover::after{
 
 .header-text{
     margin-top: 5%;
-    font-size: 30px;
-    text-shadow: 2px 4px 6px black;
+    font-size: 10px;
+    text-shadow: 2px 4px 6px white;
 }
 
 .header-text h1{
@@ -85,5 +94,30 @@ nav ul li a:hover::after{
 
 .container{
     padding: 10px 10%;
-    
+}
+
+.tab-titles{
+    display: flex;
+    margin: 20px 0 40px;
+}
+
+.tab-links{
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    position: relative;
+}
+
+.tab-links::after{
+    content: "";
+    width: 0%;
+    height: 3px;
+    background: orange;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+}
+
+.tab-links.active-link::{
+    width: 100%;
 }
