--- a/style.css
+++ b/style.css
@@ -14,10 +14,10 @@ body{
 
 #HomePage{
     width: 100%;
-  height: 100vh; 
-  background-image: url(car.webp);
-  background-size: cover;
-  background-position: center;
+    height: 100vh; 
+    background-image: url(robot.jpg);
+    background-size: auto;
+    background-position: center;
 }
 
 nav{
@@ -59,12 +59,12 @@ nav ul li a:hover::after{
 
 .header-text{
     margin-top: 5%;
-    font-size: 10px;
+    font-size: 15px;
     text-shadow: 2px 4px 6px white;
 }
 
 .header-text h1{
-    font-size: 60px;
+    font-size: 30px;
     margin-top: 20px;
 }
 
@@ -118,6 +118,59 @@ nav ul li a:hover::after{
     bottom: -6px;
 }
 
-.tab-links.active-link::{
+.tab-links.active-link::after{
     width: 100%;
+}
+
+.tab-contents{
+    display: none;
+}
+
+.tab-contents.active-tab{
+    display: block;
+}
+
+#portfolio{
+    margin-right: 30px 0;
+}
+
+.project-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 20px;
+}
+
+.project-list div{
+    background: gray;
+    padding: 40px;
+    font-size: 17px;
+    font-weight: 300;
+    border-radius: 10px;
+}
+
+#contact .container .contact-me{
+    margin-top: 40px;
+}
+
+#contact .container p{
+    margin-top: 20px;
+    font-size: 17px;
+}
+
+#contact .container p i{
+    color: orange;
+    margin-right: 15px;
+}
+
+.button{
+    display: inline-block;
+    background: orange;
+    margin: 50px auto;
+    width: fit-center;
+    border: 1px solid orange;
+    padding: 15px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: white;
 }
