--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ nav ul li a{
     color: orange;
     text-decoration: none;
     font-size: 18px;
+    font-weight: 1000;
     position: relative;
 }
 
